unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Split_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Split_Criteria__c</fullName>
    <label>Split Criteria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>