unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Split_Low__c.field-meta.xml
<CustomField>
    <fullName>Split_Low__c</fullName>
    <label>Split Low</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>