unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Tax_Added_to_FMV_Pmt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Added_to_FMV_Pmt__c</fullName>
    <description>Tax amount added to the FMV payment.</description>
    <inlineHelpText>Type in the amount of tax added to the FMV payment.</inlineHelpText>
    <label>Tax Added to FMV Pmt</label>
    <length>1</length>
    <type>Text</type>
</CustomField>