unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Tax Rate for a lease.</description>
    <inlineHelpText>Type in the tax rate associated with lease opportunity.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>