unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Tax_Treatment_DBO__c.field-meta.xml
<CustomField>
    <fullName>Tax_Treatment_DBO__c</fullName>
    <description>Tax treatment on a DBO lease.</description>
    <inlineHelpText>Tax treatment on a DBO lease.</inlineHelpText>
    <label>Tax Treatment DBO</label>
    <length>32</length>
    <type>Text</type>
</CustomField>