unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Tax_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Tax_Upfront__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tax treatment upfront</description>
    <inlineHelpText>Check box if tax treatment is up front for the lease.</inlineHelpText>
    <label>Tax Upfront</label>
    <type>Checkbox</type>
</CustomField>