unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/TIB__c.field-meta.xml
<CustomField>
    <fullName>TIB__c</fullName>
    <description>Time in Business</description>
    <inlineHelpText>Type in the customer's time in business.</inlineHelpText>
    <label>TIB</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>