unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Total_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Equipment_Cost__c</fullName>
    <description>Total Equipment Cost</description>
    <inlineHelpText>Type in the Total Equipment cost.</inlineHelpText>
    <label>Total Equipment Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>