unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Total_Pmts_60__c.field-meta.xml
<CustomField>
    <fullName>Total_Pmts_60__c</fullName>
    <description>Total of Payments for a 60 month term.</description>
    <inlineHelpText>Total of Payments for a 60 month term.</inlineHelpText>
    <label>Total Pmts 60</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>