unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/VRM_QUOTE__c.field-meta.xml
<CustomField>
    <fullName>VRM_QUOTE__c</fullName>
    <label>VRM_QUOTE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>